syntax = "proto3";

option go_package = "./pb";

package pb;


message Friend {
    int64 userId = 1;
    string username = 2;
    int64 followingCount = 3;
    int64 followerCount = 4;
    string avator = 5;
    string backgroundImage = 6;
    bool isFollow = 7;
    string signature = 8;
    int64 totalFavorited = 9;
    int64 workCount = 10;
    int64 favoriteCount = 11;
    string message = 12;
    int64 messageType = 13;
}
message Follow {
    int64 userId = 1;
    string username = 2;
    int64 followerCount = 3;
    bool  isFollow = 4;
}   


message GetAttentionReq {
    string token = 1;
    int64 touserId = 2;
    int64 fromuserId = 3;
    int64 actionType = 4;
}

message GetAttentionResp {
    string statusMsg = 1;
}

message GetFollowlistReq {
    string token = 1;
    int64 userId = 2;
}

message GetFollowlistResp {
    string statusMsg = 1;
    repeated Follow userList = 2;
}

message GetFanlistReq {
    string token = 1;
    int64 userId = 2;
}

message GetFanlistResp {
    string statusMsg = 1;
    repeated Follow userList = 2; 
}

message GetFriendsReq {
    string token = 1;
    int64 userId = 2;
}

message GetFriendsResp {
    string statusMsg = 1;
    repeated Friend userList = 2;
}

service relationservice{
    rpc getAttention(GetAttentionReq) returns (GetAttentionResp);
    rpc getAttentionRollback(GetAttentionReq) returns (GetAttentionResp);
    rpc getFollowlist(GetFollowlistReq) returns (GetFollowlistResp);
    rpc getFanlist(GetFanlistReq) returns (GetFanlistResp);
    rpc getFriends(GetFriendsReq) returns (GetFriendsResp);
}